Add picosdk.zig for build a pico application
* The picosdk provide a addPicoApp function for build a pico application
* Add .gitignore file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,22 @@ cmake_minimum_required(VERSION 3.13)
 
 # Initialize the Pico SDK
 include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
-project(mlem)
+project(${PROJ_NAME})
 pico_sdk_init()
-add_executable(mlem)
+add_executable(${PROJ_NAME})
 
 if (STDIO_USB)
-    pico_enable_stdio_uart(mlem 0)
-    pico_enable_stdio_usb(mlem 1)
+    pico_enable_stdio_uart(${PROJ_NAME} 0)
+    pico_enable_stdio_usb(${PROJ_NAME} 1)
 endif()
 
 if (STDIO_UART)
-    pico_enable_stdio_uart(mlem 1)
-    pico_enable_stdio_usb(mlem 0)   
+    pico_enable_stdio_uart(${PROJ_NAME} 1)
+    pico_enable_stdio_usb(${PROJ_NAME} 0)   
 endif()
 
 # Adjust libraries as needed
-target_link_libraries(mlem pico_stdlib pico_cyw43_arch_none ${CMAKE_SOURCE_DIR}/zig-out/mlem.o)
+target_link_libraries(${PROJ_NAME} pico_stdlib pico_cyw43_arch_none ${CMAKE_SOURCE_DIR}/zig-out/${PROJ_NAME}.o)
 
 # Generate binary
-pico_add_extra_outputs(mlem)
+pico_add_extra_outputs(${PROJ_NAME})
